# chainlit-pydanticai-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  azure-pipelines.yml  config.py  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
docs/: action-buttons.md  deploy-azure-app-service.md  deploy-gcp-cloud-run.md  eks-runbook.md  langfuse-setup.md  pgvector-migration.md
infra/: main.bicep  parameters.dev.bicepparam
infra/modules/: acr.bicep  app-service.bicep  identity.bicep  key-vault.bicep  policy.bicep  rbac.bicep  storage.bicep
k8s/: configmap.yaml  deployment.yaml  external-secret.yaml  ingress.yaml  secret.example.yaml  secret.yaml.example  service.yaml  serviceaccount.yaml
rag/: agent.py  data_loader.py  database.py  embeddings.py  vector_store.py
scripts/: create-gcp-secrets.sh  env2yaml.sh  load_kev.py
