[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "anthropic>=0.78.0",
    "boto3>=1.40.61",
    "chainlit>=2.9.6",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "pydantic-ai>=1.38.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
